--- a/web/index.html
+++ b/web/index.html
@@ -9,5 +9,8 @@
     <h1>Probando GIT</h1>
     <p>Hola Mundo</p>
     <p>Texto 1</p>
+    <p>Texto 2</p>
+    <p>Texto 3</p>
+    <p>Texto 4</p>
 </body>
 </html>
